tests/functional2/lang/builtins.foldl'/eval-fail-strict-op-application.err.exp
error:
       … while calling the 'foldl'' builtin
         at /pwd/in.nix:2:1:
            1| # Tests that the result of applying op is forced even if the value is never used
            2| builtins.foldl'
             | ^
            3|   (_: f: f null)

       … while calling anonymous lambda
         at /pwd/in.nix:3:7:
            2| builtins.foldl'
            3|   (_: f: f null)
             |       ^
            4|   null

       … from call site
         at /pwd/in.nix:3:10:
            2| builtins.foldl'
            3|   (_: f: f null)
             |          ^
            4|   null

       … while calling anonymous lambda
         at /pwd/in.nix:5:6:
            4|   null
            5|   [ (_: throw "Not the final value, but is still forced!") (_: 23) ]
             |      ^
            6|

       … caused by explicit throw
         at /pwd/in.nix:5:9:
            4|   null
            5|   [ (_: throw "Not the final value, but is still forced!") (_: 23) ]
             |         ^
            6|

       error: Not the final value, but is still forced!
